close to finish but im finished too