@@ -1,5 +1,6 @@
 package org.ea.utiltities;
 
+import org.ea.constant.GeometricConstants;
 import org.ea.exceptions.NotAClosedPolygonException;
 import org.ea.exceptions.NotATriangleException;
 import org.ea.exceptions.NotEnoughEdgesForAPolygonException;
@@ -12,18 +13,22 @@ import java.util.concurrent.BlockingQueue;
 
 public class TriangleFactory implements Runnable {
     private BlockingQueue<List<Float>> dataQueue;
+    private BlockingQueue<Triangle> triangleQueue;
     private List<Triangle> triangles = new ArrayList<>();
 
-    public TriangleFactory(BlockingQueue<List<Float>> dataQueue) {
+
+    public TriangleFactory(BlockingQueue<List<Float>> dataQueue, BlockingQueue<Triangle> triangleQueue) {
         this.dataQueue = dataQueue;
+        this.triangleQueue = triangleQueue;
     }
 
-    public TriangleFactory(){}
+    public TriangleFactory() {
+    }
 
     public ArrayList<Triangle> buildTriangles(List<Float> triangleData) {
         ArrayList<Triangle> triangles = new ArrayList<>();
-        for (int i = 0; i < triangleData.size(); i+=12) {
-            List<Float> triangleValues = triangleData.subList(i, i+12);
+        for (int i = 0; i < triangleData.size(); i += 12) {
+            List<Float> triangleValues = triangleData.subList(i, i + 12);
             Triangle triangle = this.buildTriangle(triangleValues);
             triangles.add(triangle);
         }
@@ -33,16 +38,17 @@ public class TriangleFactory implements Runnable {
     public Triangle buildTriangle(List<Float> triangleValues) {
         Vector normal = null;
         List<Vertex> vertices = new ArrayList<>();
-        for (int i = 0; i < triangleValues.size(); i+=3) {
+        for (int i = 0; i < triangleValues.size(); i += 3) {
             if (i == 0) {
-                normal = new DefaultVector(triangleValues.get(i), triangleValues.get(i+1), triangleValues.get(i+2));
+                normal = new DefaultVector(triangleValues.get(i), triangleValues.get(i + 1), triangleValues.get(i + 2));
             } else {
-                vertices.add(new DefaultVertex(triangleValues.get(i), triangleValues.get(i+1), triangleValues.get(i+2)));
+                vertices.add(new DefaultVertex(triangleValues.get(i), triangleValues.get(i + 1), triangleValues.get(i + 2)));
             }
         }
         Vertex[] vertexArray = vertices.toArray(new Vertex[0]);
         try {
-            return new Triangle(vertexArray, normal);
+            Edge3D[] edges = GeometryUtils.createEdgesFromVertices(vertexArray);
+            return new Triangle(edges, normal, this.calculateArea(edges), this.calculatePerimeter(edges));
         } catch (NotATriangleException | NotAClosedPolygonException | NotEnoughEdgesForAPolygonException e) {
             System.out.println(e.getMessage());
             System.exit(-1);
@@ -54,25 +60,50 @@ public class TriangleFactory implements Runnable {
         return triangles;
     }
 
+    public double calculateArea(Edge3D[] edges) {
+        double area;
+
+        // getting direction of edges
+        Vector dir1 = edges[GeometricConstants.FIRST_EDGE].getDirection();
+        Vector dir2 = edges[GeometricConstants.SECOND_EDGE].getDirection();
+
+        // calculating crossproduct
+        Vector crossProduct = dir1.crossProduct(dir2);
+
+        // length of crossproduct equals to the area of the parallelogramm
+        double parallelogramArea = crossProduct.length();
+
+        // diving parallelogramAre by 2 to get the area of triangle
+        area = parallelogramArea / GeometricConstants.HALF_OF_PARALLELOGRAM;
+
+        return area;
+    }
+
+    public double calculatePerimeter(Edge3D[] edges) {
+        return edges[GeometricConstants.FIRST_EDGE].getLength() + edges[GeometricConstants.SECOND_EDGE].getLength() + edges[GeometricConstants.THIRD_EDGE].getLength();
+    }
+
+
     @Override
     public void run() {
-        if (dataQueue == null) {
+        if (this.dataQueue == null) {
             return; // Queue ist null → Abbruch
         }
 
         while (!Thread.currentThread().isInterrupted()) {
             try {
-                List<Float> triangleData = dataQueue.take(); // Ein Element holen
+                List<Float> triangleData = this.dataQueue.take(); // Ein Element holen
 
                 // Prüfe auf End-Signal (null oder leere Liste)
-                if (triangleData.getFirst() == null || triangleData.isEmpty()) {
+                if (triangleData.get(0) == null) {
                     break; // Beende die Schleife
                 }
 
                 // Erstelle das Dreieck und füge es hinzu
                 Triangle triangle = this.buildTriangle(triangleData);
                 if (triangle != null) {
-                    this.triangles.add(triangle);
+                    this.getTriangles().add(triangle);
+                    this.triangleQueue.add(triangle);
                 }
 
             } catch (InterruptedException e) {
@@ -80,5 +111,8 @@ public class TriangleFactory implements Runnable {
                 break; // Schleife beenden
             }
         }
+
+        // ACHTUNG GIFTIGE PILLE
+
     }
 }
